--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
-apply plugin: 'jacoco'
 apply plugin: 'java'
-apply plugin: 'checkstyle'
 
 repositories {
     mavenCentral()
+}
+
+task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.helloworld.joseg.Main'
+    classpath = sourceSets.main.runtimeClasspath
 }
