--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,7 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runHighestlowestAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
