Added solution of excersise multiples of kata and modified file build gradle with task

--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,7 @@ task runHighestlowestAlvaro (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.alvaro.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runMultiplesAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
