--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,13 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task runHelloWorldMauricioG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.helloworld.mauricio.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runHighestLowestMauricioG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.mauricio.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
