--- a/build.gradle
+++ b/build.gradle
@@ -16,3 +16,7 @@ task runMultiplesAlvaro (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.multiples.alvaro.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runPhonenumberAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
