Add two new solved problems, the first one solves the sum of the multiples of 3 and 5 below a certain input value, the second one solves a phonenumber or at least the format of a phone number with a list of input numbers

--- a/build.gradle
+++ b/build.gradle
@@ -18,3 +18,18 @@ task runHighestLowestMauricioG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.mauricio.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task LikesMauricioG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.mauricio.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task MultiplesMauricioG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.mauricio.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task PhoneNumberMauricioG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.mauricio.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
