--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ repositories {
     mavenCentral()
 }
 
-task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.helloworld.joseg.Main'
+task runHighestLowestRodrigo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.rodrigob.highestlowest'
     classpath = sourceSets.main.runtimeClasspath
 }
