--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,7 @@ task runHighestLowestRodrigo (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.rodrigob.highestlowest'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runLikesRodrigo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.rodrigob.likes'
+    classpath = sourceSets.main.runtimeClasspath
+}
