--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,7 @@ task runLikesRodrigo (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.likes.rodrigob.likes'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runMultiplesRodrigo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.rodrigob.multiples'
+    classpath = sourceSets.main.runtimeClasspath
+}
