--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,8 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task runKata1 (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.maria.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
