--- a/build.gradle
+++ b/build.gradle
@@ -20,3 +20,7 @@ task runPhonenumberAlvaro (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.phonenumber.alvaro.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runLikesAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
