modified for run with gradle

--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,31 @@ repositories {
     mavenCentral()
 }
 
+run.standardInput = System.in;
+
+
 task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task runhighestlowestSarai (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.sarai.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runlikesSarai (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.sarai.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runmultiplesSarai (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.sarai.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runphonenumberSarai (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.sarai.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
