--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,8 @@ task runHighestLowestAdriana (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.adriana.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task runLikesAdriana (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.adriana.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
