--- a/build.gradle
+++ b/build.gradle
@@ -2,27 +2,36 @@ apply plugin: 'java'
 
 repositories {
     mavenCentral()
+    
 }
 
 task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
+    standardInput=System.in
     classpath = sourceSets.main.runtimeClasspath
 }
 
 task runferHighlow (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.fernanda.Main'
+    standardInput=System.in
     classpath = sourceSets.main.runtimeClasspath
+
+    
 }
 task runferLikes (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.likes.fernanda.Main'
+    standardInput=System.in 
     classpath = sourceSets.main.runtimeClasspath
+    
 }
 
 task runfermultiples (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.multiples.fernanda.Main'
+    standardInput=System.in
     classpath = sourceSets.main.runtimeClasspath
 }
 task runferphone (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.phonenumber.fernanda.Main'
+    standardInput=System.in
     classpath = sourceSets.main.runtimeClasspath
 }
