--- a/build.gradle
+++ b/build.gradle
@@ -9,6 +9,12 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 
+task runHelloWorldAdriana (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.helloworld.adriana.Main'
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+
 task runHighestLowestAdriana (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.adriana.Main'
     classpath = sourceSets.main.runtimeClasspath
