--- a/build.gradle
+++ b/build.gradle
@@ -8,3 +8,9 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task runHighlowLibertad (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.libertad.Main'
+    classpath = sourceSets.main.runtimeClasspath
+    standarInput = System.in
+}
