--- a/build.gradle
+++ b/build.gradle
@@ -1,33 +1,27 @@
 apply plugin: 'java'
-apply plugin: 'checkstyle'
+
 
 repositories {
     mavenCentral()
 }
 
-dependencies {
-    testImplementation 'junit:junit:4.12'
-}
-
-test {
-    testLogging {
-        events "failed"
-        exceptionFormat "full"
-    }
-}
-
-checkstyle {
-    checkstyleMain.source = "src/main/"
-    checkstyleMain.excludes = ["**/src/test/**"]
-}
-
-checkstyleMain {
-    source = 'src/main/java'
-}
-
-test.finalizedBy("checkstyleMain")
-
 task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.helloworld.joseg.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runhighestlowestDaniela (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.daniela.highestlowest'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runlikesDaniela (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.daniela.likes'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runmultiplesDaniela (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.daniela.multiples'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runphonenumberDaniela (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.daniela.phonenumber'
     classpath = sourceSets.main.runtimeClasspath
 }
