Check style and correct the errors in all katas

--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,7 @@ task runLikesAdriana (dependsOn: 'classes', type: JavaExec) {
 task runMultiplesAdriana (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.multiples.Adriana.Main'
     classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
 }
 
 task runPhoneNumberAdriana (dependsOn: 'classes', type: JavaExec) {
