Modify in build.gradle and Main of libertad folder in highestlowest

--- a/build.gradle
+++ b/build.gradle
@@ -35,5 +35,5 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
 task runHighlowLibertad (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.highestlowest.libertad.Main'
     classpath = sourceSets.main.runtimeClasspath
-    standarInput = System.in
+    standardInput = System.in
 }
