--- a/build.gradle
+++ b/build.gradle
@@ -39,3 +39,7 @@ task runLikesRodrigo (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.likes.rodrigob.Likes'
     classpath = sourceSets.main.runtimeClasspath
 }
+task runMultiplesRodrigo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.rodrigob.Multiples'
+    classpath = sourceSets.main.runtimeClasspath
+}
