--- a/build.gradle
+++ b/build.gradle
@@ -51,7 +51,7 @@ task runLikesRodrigov (dependsOn: 'classes', type: JavaExec) {
 }
 
 task runHighestLowestAdriana (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.highestlowest.adriana.Main' // Example: 'jalau.at18.katas.highestlowest.Main'
+    main = 'jalau.at18.katas.highestlowest.adriana.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
 
