--- a/build.gradle
+++ b/build.gradle
@@ -32,18 +32,37 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
     classpath = sourceSets.main.runtimeClasspath
 }
 task runhighestlowestDaniela (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.HighestLowest.daniela.HighestLowest'
+    main = 'jalau.at18.katas.highestlowest.daniela.highestlowest'
     classpath = sourceSets.main.runtimeClasspath
 }
 task runlikesDaniela (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.Likes.daniela.Likes'
+    main = 'jalau.at18.katas.likes.daniela.likes'
     classpath = sourceSets.main.runtimeClasspath
 }
 task runmultiplesDaniela (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.Multiples.daniela.Multiples'
+    main = 'jalau.at18.katas.multiples.daniela.multiples'
     classpath = sourceSets.main.runtimeClasspath
 }
 task runphonenumberDaniela (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.PhoneNumber.daniela.PhoneNumber'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runHighestLowestRodrigov (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.rodrigov.Main' // Example: 'jalau.at18.katas.highestlowest.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runMultiplesRodrigov(dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.rodrigov.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runPhonenumberRodrigov (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.rodrigov.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runLikesRodrigov (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.rodrigov.Main'
+
     classpath = sourceSets.main.runtimeClasspath
 }
