--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,24 @@ task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
 }
 
 task runhighlow (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.highestlowest.joser'
+    main = 'jalau.at18.katas.highestlowest.joser.Main'
     classpath = sourceSets.main.runtimeClasspath
+}
+
+task runphone(dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.joser.Main'
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+
+task runlikes (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.joser.Main'
+    classpath = sourceSets.main.runtimeClasspath
+        standardInput = System.in
+}
+
+task runhighlow (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.joser.Main'
+    classpath = sourceSets.main.runtimeClasspath
+     standardInput = System.in
 }
