Change for test with junit

--- a/build.gradle
+++ b/build.gradle
@@ -27,25 +27,7 @@ checkstyleMain {
 
 test.finalizedBy("checkstyleMain")
 
-task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.helloworld.joseg.Main'
-    classpath = sourceSets.main.runtimeClasspath
-}
-
-task runHighestLowestRodrigov (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.highestlowest.rodrigov.Main' // Example: 'jalau.at18.katas.highestlowest.Main'
-    classpath = sourceSets.main.runtimeClasspath
-}
-
-task runMultiplesRodrigov(dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.multiples.rodrigov.Main'
-    classpath = sourceSets.main.runtimeClasspath
-}
-task runPhonenumberRodrigov (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.phonenumber.rodrigov.Main'
-    classpath = sourceSets.main.runtimeClasspath
-}
-task runLikesRodrigov (dependsOn: 'classes', type: JavaExec) {
-    main = 'jalau.at18.katas.likes.rodrigov.Main'
+task runhighestlowestSergio (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.sergio.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
