Add function for Read Moves

--- a/build.gradle
+++ b/build.gradle
@@ -87,4 +87,5 @@ task runLikesAdriana (dependsOn: 'classes', type: JavaExec) {
 task run2048 (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.2048.team3.Main'
     classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
 }
