--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,83 @@ checkstyleMain {
 
 test.finalizedBy("checkstyleMain")
 
+task runHelloWorldJoseG (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.helloworld.joseg.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runHighestlowestAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runMultiplesAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runPhonenumberAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.alvaro.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runLikesAlvaro (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.alvaro.Main'
+}
+task runHighestLowestRodrigov (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.rodrigov.Main' // Example: 'jalau.at18.katas.highestlowest.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runMultiplesRodrigov(dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.rodrigov.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runPhonenumberRodrigov (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.rodrigov.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runLikesRodrigov (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.rodrigov.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runHighestLowestAdriana (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.adriana.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runMultiplesAdriana(dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.adriana.Main'
+    classpath = sourceSets.main.runtimeClasspath
+    standardInput = System.in
+}
+task runPhonenumberAdriana (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.adriana.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+task runLikesAdriana (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.adriana.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
 task runHelloWorldHugo (dependsOn: 'classes', type: JavaExec) {
-    main = 'main.java.jalau.at18.katas.helloworld.hugo.Main'
+    main = 'jalau.at18.katas.helloworld.hugo.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runHighestLowestHugo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.highestlowest.hugo.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runLikesHugo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.likes.hugo.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runMultiplesHugo(dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.multiples.hugo.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+task runPhonenumberHugo (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.phonenumber.hugo.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
