--- a/build.gradle
+++ b/build.gradle
@@ -82,3 +82,8 @@ task runLikesAdriana (dependsOn: 'classes', type: JavaExec) {
     main = 'jalau.at18.katas.likes.adriana.Main'
     classpath = sourceSets.main.runtimeClasspath
 }
+
+task runTeam4Game2048 (dependsOn: 'classes', type: JavaExec) {
+    main = 'jalau.at18.katas.game2048.team4.Main'
+    classpath = sourceSets.main.runtimeClasspath
+}
