--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'java'
 apply plugin: 'checkstyle'
 
 repositories {
-    mavenCentral()  
+    mavenCentral()
 }
 
 dependencies {
@@ -15,6 +15,9 @@ test {
         events "failed"
         exceptionFormat "full"
     }
+    filter {
+        includeTestsMatching "jalau.at18.pacman.*"
+    }
 }
 
 checkstyle {
@@ -24,6 +27,14 @@ checkstyle {
 
 checkstyleMain {
     source = 'src/main/java'
+}
+
+jacocoTestReport {
+    afterEvaluate {
+        classDirectories.setFrom(files(classDirectories.files.collect {
+            fileTree(dir: it, exclude: ['jalau/at18/katas/**'])
+        }))
+    }
 }
 
 test.finalizedBy("checkstyleMain")
