Added unit test for system.exit scenario when the game is over. Added a library to test system.exit calls

--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,7 @@ repositories {
 }
 
 dependencies {
+    testImplementation 'com.github.stefanbirkner:system-rules:1.19.0'
     testImplementation 'junit:junit:4.12'
 }
 
